# Kunikum

./: .gitignore  CMakeLists.txt  LICENSE  README.md  app.kun  build&run.sh
.cache/clangd/index/: VRAM.cpp.66923E4029888A06.idx  VRAM.h.C5D85A234283507B.idx  main.cpp.0912154F48201C19.idx  onload.cpp.446978BF1A2BEE2A.idx  reading.cpp.3BDF38894EB84574.idx  reading.h.1C5FD1863A0C1535.idx
.github/workflows/: cmake.yml  devBuild.yml
src/: VRAM.cpp  VRAM.h  main.cpp  old  reading.cpp  reading.h
